sumo/tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_trip_ignore/errors.sumo
Warning: No connection between edge 'SC_depart_connector' and edge 'CW_arrival_connector' found.
